# mirakanai-engine

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .git-commit-msg.tmp  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md  vcpkg.json
editor/: CMakeLists.txt
editor/core/src/: ai_command_panel.cpp  ai_operation_surface.cpp  asset_browser_production.cpp  asset_import_jobs.cpp  asset_import_regression_workflow.cpp  asset_import_review.cpp  asset_pipeline.cpp  command.cpp  content_browser.cpp  content_browser_import_panel.cpp  editor_cross_platform_shell.cpp  editor_dock_layout.cpp  editor_rich_text.cpp  editor_ui_performance.cpp  environment_artist_workflow_v2.cpp  environment_authoring.cpp  game_module_driver.cpp  generated_game_studio.cpp  gltf_mesh_catalog.cpp  history.cpp  input_rebinding.cpp  io.cpp  material_asset_preview_panel.cpp  material_authoring.cpp  material_graph_authoring.cpp  palette.cpp  play_in_editor.cpp  playtest_package_review.cpp  prefab_variant_authoring.cpp  profiler.cpp  project.cpp  project_wizard.cpp  render_backend.cpp  resource_panel.cpp  runtime_ui_authoring.cpp  scene_authoring.cpp  scene_edit.cpp  shader_artifact_io.cpp  shader_compile.cpp  shader_tool_discovery.cpp  (+8 more)
editor/include/: compile_flags.txt
editor/shaders/: native_editor_visible_texture.hlsl
editor/src/: compile_flags.txt  first_party_editor_adapter_boundaries.hpp  first_party_editor_docking.cpp  first_party_editor_docking.hpp  first_party_editor_document.cpp  first_party_editor_document.hpp  first_party_editor_rich_text.cpp  first_party_editor_rich_text.hpp  main.cpp  material_preview_gpu_cache.cpp  material_preview_gpu_cache.hpp  native_asset_import_copy.cpp  native_asset_import_copy.hpp  native_editor_app.cpp  native_editor_app.hpp  native_editor_launch.cpp  native_editor_launch.hpp  native_editor_panels.cpp  native_editor_panels.hpp  native_editor_text_atlas_handoff.cpp  native_editor_text_atlas_handoff.hpp  native_editor_text_font_adapters.cpp  native_editor_text_font_adapters.hpp  native_editor_text_input.cpp  native_editor_text_input.hpp  native_editor_tsf_text_input.cpp  native_editor_tsf_text_input.hpp  native_editor_uia_provider.cpp  native_editor_uia_provider.hpp  native_editor_visible_texture_compositor.cpp  native_editor_visible_texture_compositor.hpp  native_editor_win32_services.cpp  native_editor_win32_services.hpp  native_material_preview_cache.cpp  native_material_preview_cache.hpp  native_texture_display_adapter.cpp  native_texture_display_adapter.hpp  native_viewport_surface.cpp  native_viewport_surface.hpp  sdl_viewport_texture.cpp  (+9 more)
engine/ai/: CMakeLists.txt
engine/ai/src/: behavior_tree.cpp  perception.cpp
engine/animation/: CMakeLists.txt
engine/animation/src/: chain_ik.cpp  keyframe_animation.cpp  morph.cpp  skeleton.cpp  skin.cpp  state_machine.cpp  timeline.cpp  two_bone_ik.cpp
engine/assets/: CMakeLists.txt
engine/assets/src/: asset_dependency_graph.cpp  asset_hot_reload.cpp  asset_identity.cpp  asset_import_batch_reimport.cpp  asset_import_metadata.cpp  asset_import_pipeline.cpp  asset_import_preset_diff.cpp  asset_import_presets.cpp  asset_import_production_review.cpp  asset_import_provenance.cpp  asset_import_regression_corpus.cpp  asset_import_regression_triage.cpp  asset_package.cpp  asset_registry.cpp  asset_source_format.cpp  material.cpp  material_graph.cpp  material_graph_shader_export.cpp  mavg_cluster_graph.cpp  mavg_cluster_payload.cpp  mavg_deformation.cpp  mavg_ray_tracing_consistency.cpp  shader_metadata.cpp  shader_pipeline.cpp  source_asset_registry.cpp  sprite_atlas_packing.cpp  tilemap_metadata.cpp  ui_atlas_metadata.cpp
engine/audio/: CMakeLists.txt
engine/audio/sdl3/: CMakeLists.txt
engine/audio/src/: audio_mixer.cpp
engine/audio/wasapi/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/src/: application.cpp  diagnostics.cpp  job_execution.cpp  log.cpp  memory.cpp  registry.cpp  simd_dispatch.cpp  simd_dispatch_avx2.cpp  simd_dispatch_detail.hpp  time.cpp  version.cpp
engine/environment/: CMakeLists.txt
engine/environment/src/: cloud_layer.cpp  commercial_readiness_v2.cpp  environment_commercial_readiness.cpp  environment_io.cpp  environment_preset_pack.cpp  environment_profile.cpp  environment_quality_budget.cpp  material_weathering.cpp  time_of_day.cpp  weather.cpp  weather_simulation.cpp
engine/math/: CMakeLists.txt
engine/math/src/: math.cpp
engine/navigation/: CMakeLists.txt
engine/navigation/src/: local_avoidance.cpp  navigation_agent.cpp  navigation_crowd.cpp  navigation_grid.cpp  navigation_hierarchical_world.cpp  navigation_navmesh.cpp  navigation_path_planner.cpp  navigation_production_breadth.cpp  navigation_replan.cpp  path_following.cpp  path_smoothing.cpp
engine/physics/: CMakeLists.txt
engine/physics/jolt/: CMakeLists.txt
engine/physics/src/: native_adapter.cpp  physics2d.cpp  physics3d.cpp  physics_production_breadth.cpp
engine/platform/: CMakeLists.txt
engine/platform/linux/: CMakeLists.txt
engine/platform/sdl3/: CMakeLists.txt
engine/platform/src/: clipboard.cpp  cursor.cpp  dynamic_library.cpp  file_dialog.cpp  file_watcher.cpp  filesystem.cpp  input.cpp  lifecycle.cpp  linux_file_watcher.cpp  macos_file_watcher.cpp  mobile.cpp  process.cpp  win32_process.cpp  window.cpp  windows_file_watcher.cpp
engine/platform/win32/: CMakeLists.txt
engine/renderer/: CMakeLists.txt
engine/renderer/src/: backend_renderer_parity_policy.cpp  cloud_layer_policy.cpp  debug_profiling_policy.cpp  (+40 more)
engine/rhi/: CMakeLists.txt
engine/runtime/: CMakeLists.txt
engine/runtime_host/: CMakeLists.txt
engine/runtime_rhi/: CMakeLists.txt
engine/runtime_scene/: CMakeLists.txt
engine/runtime_scene_rhi/: CMakeLists.txt
engine/scene/: CMakeLists.txt
engine/scene_renderer/: CMakeLists.txt
engine/tools/: CMakeLists.txt
engine/ui/: CMakeLists.txt
engine/ui_renderer/: CMakeLists.txt
examples/installed_consumer/: CMakeLists.txt  README.md  main.cpp
platform/ios/: CMakeLists.txt  Info.plist.in  README.md
(+2414 files in other folders)
